# Python-Jax-Fast-Stokesian-Dynamics

./: .gitignore  .readthedocs.yaml  AppliedForces.py  DancingSpheres_reference.npy  EwaldTables.py  Helper.py  JFSD.py  LICENSE_SHORT  Lanczos_lax.py  Mobility.py  README.md  ResTableDist.npy  ResTableVals.npy  Resistance.py  Shear.py  Thermal.py  appliedForces.py  create_trajectory_xyz.py  ewaldTables.py  gmres.py  input_spiral.npy  jaxmd_partition.py  jaxmd_space.py  lanczos.py  main.py  mobility.py  pyproject.toml  resistance.py  run_tests_cpu.sh  spiral.toml  test_class.py  thermal.py  utils.py
.github/workflows/: python-publish.yml  testing.yml
dancing_spheres/: trajectory.npy
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
f61n1000sdbench/: input.toml  python_jfsd.sh
files/: dancing_spheres.toml  dancing_spheres_ref.npy  example_configuration.toml  gel_configuration.toml  initial_position_dancing_spheres.npy  minimal_configuration.toml  sedimenting_triangle_reference.npy  shear_pair_ref.npy  sheared_triplet_reference.npy
jfsd/: JFSD.py  __main__.py  appliedForces.py  applied_forces.py  config.py  default_configuration.toml  enums.py  ewaldTables.py  ewald_tables.py  integrator.py  interactive.py  io_utils.py  jaxmd_dataclasses.py  jaxmd_partition.py  jaxmd_space.py  jaxmd_util.py  jfsd_gui.py  lanczos.py  main.py  mainBD.py  mobility.py  resistance.py  shear.py  solver.py  thermal.py  timing_utils.py  utils.py
scripts/: JFSD.py
tests/: test_class.py  test_class_cpu.py  test_io_utils.py
