[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jfsd"
authors = [
    { name = "William Torre", email = "william.torre.ct@gmail.com" },
]
description = "Python implementation of Fast Stokesian Dynamics methods."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["irods", "data management", "storage"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "jax==0.4.17",
    "numpy",
    "scipy==1.10.1",
    "jraph==0.0.6.dev0",
    "absl-py==2.1.0",
    "tomli;python_version<'3.11'",
    "tqdm",
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/torrewk/Python-Jax-Fast-Stokesian-Dynamics"
documentation = "https://github.com/torrewk/Python-Jax-Fast-Stokesian-Dynamics"

[project.optional-dependencies]
test = [
    "pylint",
    "pytest",
    "freud-analysis",
    # "pytest-cov",
    "ruff",
    "mypy",
    "types-tqdm",
    "sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon",
    "sphinx-autodoc-typehints", "sphinx_inline_tabs", "sphinx_copybutton"
]

[project.scripts]
jfsd = "jfsd.__main__:cli_main"

[tool.setuptools]
packages = ["jfsd"]

[tool.setuptools_scm]
write_to = "jfsd/_version.py"

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.pylint.'MASTER']
 ignore-patterns="_version.py"

[tool.pylint.'BASIC']
good-names=["e", "f", "m"]


[tool.pylint.'FORMAT']
max-line-length=100
max-locals=35
max-args=10

[tool.ruff]
exclude = ["_version.py"]
line-length = 100
select = ["D", "E", "F", "W", "I", "N"]
ignore = ["D203", "D213"]
